WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166751
TextFragmentIterator::runWidth does not need typename CharacterType<> anymore.
https://bugs.webkit.org/show_bug.cgi?id=166751
Summary
TextFragmentIterator::runWidth does not need typename CharacterType<> anymore.
alan
Reported
2017-01-05 19:27:52 PST
remove it.
Attachments
Patch
(3.27 KB, patch)
2017-01-05 19:30 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-01-05 19:30:13 PST
Created
attachment 298166
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-05 20:10:48 PST
Comment on
attachment 298166
[details]
Patch Clearing flags on attachment: 298166 Committed
r210433
: <
http://trac.webkit.org/changeset/210433
>
WebKit Commit Bot
Comment 3
2017-01-05 20:10:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug