TextFragmentIterator::runWidth does not need typename CharacterType<> anymore. https://bugs.webkit.org/show_bug.cgi?id=166751

Reviewed by Simon Fraser.

No change in functionality.

* rendering/SimpleLineLayoutTextFragmentIterator.cpp:
(WebCore::SimpleLineLayout::TextFragmentIterator::textWidth):
* rendering/SimpleLineLayoutTextFragmentIterator.h:


Canonical link: https://commits.webkit.org/183896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210433 268f45cc-cd09-0410-ab3c-d52691b4dbfc